test-package-compiler/src/snapshots/test_package_compiler__generated_tests__opaque_type_destructure.snap
---
source: test-package-compiler/src/generated_tests.rs
assertion_line: 19
expression: /Users/louis/src/gleam/gleam/test-package-compiler/cases/opaque_type_destructure
---
error: Unknown variable
  ┌─ src/two.gleam:7:7
  │
7 │   let User(name: name, score: score) = user
  │       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Did you mean `user`?

The name `User` is not in scope here.

